src/styling/block-keywords-style.css
body {
  width: 300px;
  max-height: 481px;
}

p {
  font-size: 0.9rem;
}

.block-new-keyword-container {
  display: flex;
}

.input-keyword {
  font-size: 1.2em;
  height: 32px;
  width: 100%;
  padding: 10px 10px 10px 0.6rem;
  border-radius: 4px 0 0 4px;
  border: 1px solid black;
  border-right: none;
}

.description {
  margin: 10px 0;
}

.block-new-keyword-btn {
  font-size: 1.2em;
  height: 32px;
  padding: 0 12px;
  border-radius: 0 4px 4px 0;
  text-align: center;
  background-color: #f06e45;
}

.block-new-keyword-msg {
  margin: 2px;
}

.keyword-list-description {
  margin: 18px 0 6px 0;
  padding: 0;
}

.keyword-search-container {
  position: relative;
  overflow-y: scroll;
}

.keyword-search-container i {
  position: absolute;
  left: 13px;
  top: 15px;
}

.keyword-search-input {
  width: calc(100% - 10px);
  height: 32px;
  border-radius: 4px;
  margin: 0 5px;
  padding: 12px 0 12px 28px;
  border: 1px solid black;
}

.blocked-keywords-list {
  padding: 0;
  margin: 8px -8px 0 -8px;
  overflow-y: scroll;
  max-height: 262px;
}

.block-keyword-item {
  display: flex;
  align-items: center;
  height: 35px;
}

.block-keyword-item p {
  margin-left: 16px;
  font-size: 1.17em;
}

.block-keyword-item button {
  margin-left: auto;
  margin-right: 18px;
  padding: none;
  background: none;
  height: 20px;
}

.no-results-msg {
  margin: 0 0 0 16px;
  font-family: "inria-serif", serif;
  font-size: 0.87rem;
}

.load-more-btn {
  background: #8fc0a9;
  width: 100%;
  padding: 0.5em;
}

.load-more-btn:hover {
  background: #82af9a;
}

.load-more-btn:active {
  background: #79a390;
}

.go-back-btn {
  background: none;
  margin: 10px;
  padding: 0;
  float: right;
}

.go-back-btn a {
  text-decoration: none;
  color: black;
  font-size: 1.12em;
}

.go-back-btn i {
  padding-right: 4px;
}

